--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link href="css/estilos.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Proyecto empresarial</h1>
+    <h1>Proyecto empresarial...</h1>
 </body>
 </html>
